crates/toml_edit/tests/snapshots/invalid/datetime/day-zero.stderr
TOML parse error at line 1, column 7
  |
1 | foo = 1997-09-00T09:09:09.09Z
  |       ^^^^^^^^^^^^^^^^^^^^^^^
invalid date, expected day between 01 and 30
